@@ -13,9 +13,7 @@ import Model.Mouvement;
 import Model.comptesTiers;
 import Model.planComptable;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import java.lang.Iterable;
 import java.util.Iterator;
@@ -25,10 +23,11 @@ import java.util.List;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.support.DefaultTransactionDefinition;
+import org.springframework.web.servlet.View;
+import DAO.EntrepriseDAO;
+
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
-
-import org.springframework.web.bind.annotation.ModelAttribute;
-
 @RequestMapping("/mouvements")
 @Controller
 public class MouvementController {
@@ -40,26 +39,42 @@ public class MouvementController {
     private PlatformTransactionManager tmanager;
     @Autowired
     CompteTiersRepo compterepo;
-    
+    @Autowired
+    EntrepriseDAO epd;
+    @Autowired
+    planComptableDao plcdao;
+
     @Autowired
     PlanComptaRepo plancomptarepo;
     static ArrayList<Mouvement> mouvements ;
-    
-    @GetMapping("/page.html")
-    public ModelAndView planComptablePage(){
+
+    @GetMapping("/page.html/{id}")
+    public ModelAndView planComptablePage(@PathVariable(value="id")String id, @RequestParam(value="message",required=false) String message){
         ModelAndView md=new ModelAndView("pageMouvement");
+        md.addObject("obj",epd.findById(Long.valueOf(id)).get());
+        md.addObject("entid",id);
         Mouvement m = new Mouvement();
-        m.setId_Journal(new Long(1));
-        md.addObject("vao",m);
-        md.addObject("mouvements",this.getMouvements());
-        mouvements = null;
-        md.addObject("destination","ajouter");
-        List<comptesTiers> lcompte = this.compterepo.findByIntitule("Compte1");
-        System.out.println("taille du repo="+lcompte.size());
-        return md;
+        try{
+            m.setId_Journal(Long.valueOf(id));
+            md.addObject("vao",m);
+            md.addObject("mouvements",this.getMouvements());
+            md.addObject("mouvementNonValides",this.mouvements);
+            md.addObject("destination","ajouter");
+            ArrayList<planComptable> tiers = this.getPlanComptable();
+            md.addObject("comptables", tiers);
+            md.addObject("Message",message);
+            return md;
+        }
+        catch(Exception e){
+            md.addObject("message",e.getMessage());
+            md.setViewName("Creation");
+        }
+        finally{
+            return md;
+        }
     }
-    @GetMapping("/valider.html")
-    public String validerMouvements(){
+    @GetMapping("/valider.html/{id}")
+    public String validerMouvements(@PathVariable(value="id")String id){
         TransactionStatus trans=tmanager.getTransaction(new DefaultTransactionDefinition());
         try{
             if(mouvements!=null&&this.testSiEquilibre(mouvements))
@@ -68,9 +83,10 @@ public class MouvementController {
                 {
                     this.cptdao.save(mouv);
                 }
+                mouvements = null;
             }
             else{
-                return "error";
+                return "redirect:/mouvements/page.html/"+id+"?message=Solde non equilibré";
             }
             tmanager.commit(trans);
         }
@@ -79,30 +95,72 @@ public class MouvementController {
             ex.printStackTrace();
             tmanager.rollback(trans);
         }
-        return "redirect:page.html";
+        return "redirect:/mouvements/page.html/"+id;
     }
-    @PostMapping("/ajouter")
-    public ModelAndView addComptesTiers(@ModelAttribute Mouvement cpt ){
+
+    public ArrayList<comptesTiers> getComptesTiers(){
+      Iterable<comptesTiers> liste=this.tiersdao.findAll(); //test
+      Iterator itr=liste.iterator();
+      ArrayList<comptesTiers> vliste=new ArrayList<>();
+      comptesTiers tp=null;
+      while(itr.hasNext()){
+        tp=(comptesTiers) itr.next();
+        System.out.println(tp);
+        vliste.add(tp);
+      }
+      return vliste;
+    }
+    public ArrayList<planComptable> getPlanComptable(){
+      Iterable<planComptable> liste=this.plcdao.findAll(); //test
+      Iterator itr=liste.iterator();
+      ArrayList<planComptable> vliste=new ArrayList<>();
+      planComptable tp=null;
+      while(itr.hasNext()){
+        tp=(planComptable) itr.next();
+        System.out.println(tp);
+        vliste.add(tp);
+      }
+      return vliste;
+    }
+
+
+    @PostMapping("/ajouter/{id}")
+    public ModelAndView addComptesTiers(@ModelAttribute Mouvement cpt, @PathVariable(value="id")String id ){
         //this.cptdao.save(cpt);
         if(mouvements==null)
             mouvements = new ArrayList<Mouvement>();
         ModelAndView md=new ModelAndView("pageMouvement");
+        md.addObject("obj",epd.findById(Long.valueOf(id)).get());
         Mouvement m = new Mouvement();
+        md.addObject("entid",id);
         m.setId_Journal(cpt.getId_Journal());
         md.addObject("vao",m);
-        if(!this.tiersdao.existsById(cpt.getId_tiers()))
+        md.addObject("destination","ajouter");
+        ArrayList<planComptable> tiers = this.getPlanComptable();
+        md.addObject("comptables", tiers);
+        if(cpt.getDebit()!=0&&cpt.getCredit()!=0)
+        {
+            md.addObject("mouvements",this.getMouvements());
+            md.addObject("mouvementNonValides",this.mouvements);
+            md.addObject("Message","Pas de debit et credit en meme temps");
+            return md;
+        }
+        if(cpt.getId_tiers()!=null&&!this.tiersdao.existsById(cpt.getId_tiers()))
+        {
+            md.addObject("mouvements",this.getMouvements());
+            md.addObject("mouvementNonValides",this.mouvements);
+            md.addObject("Message","Compte tier introuvable");
+            return md;
+        }
+/*        if(!this.cptdao.existsById(cpt.getId_tiers()))
         {
             //message erreur
         }
-        if(!this.cptdao.existsById(cpt.getId_tiers()))
-        {
-            //message erreur
-        }
-        if(this.tiersdao.existsById(cpt.getId_tiers())&&this.cptdao.existsById(cpt.getId_tiers()))
+        */
         //if(this.tiersdao.existsById(cpt.getId_tiers())&&this.cptdao.existsById(cpt.getId_tiers()))
-        if(this.tiersdao.existsById(cpt.getId_tiers()))
-            mouvements.add(cpt);
-        md.addObject("mouvements",mouvements);
+        mouvements.add(cpt);
+        md.addObject("mouvements",this.getMouvements());
+        md.addObject("mouvementNonValides",this.mouvements);
         md.addObject("destination","ajouter");
         return md;
     }
@@ -132,21 +190,23 @@ public class MouvementController {
       System.out.println("taille="+this.cptdao.count());
       return vliste;
     }
-    @GetMapping("/supprimer")
-    public String supprPlanComptable(@RequestParam("id") Long id){
+    @GetMapping("/supprimer/{id}")
+    public String supprPlanComptable(@RequestParam("id") Long id,@PathVariable(value="id")String ide){
       Mouvement cpt=this.cptdao.findById(id).get();
       if(cpt!=null) this.cptdao.delete(cpt);
-      return "redirect:page.html";
+      return "redirect:/mouvements/page.html/"+ide;
     }
-    @GetMapping("/pageModif.html")
-    public ModelAndView ModifplanComptable(@RequestParam("id") Long id){
+    @GetMapping("/pageModif.html/{id}")
+    public ModelAndView ModifplanComptable(@RequestParam("id") Long id, @PathVariable(value="id")String ide){
       Mouvement plc=this.cptdao.findById(id).get();
       if(plc==null) plc=new Mouvement();
         ModelAndView md=new ModelAndView("pageMouvement");
+        md.addObject("entid",ide);
+        md.addObject("obj",epd.findById(Long.valueOf(ide)).get());
         md.addObject("mouvements",getMouvements());
         md.addObject("vao",plc);
         md.addObject("destination","modifier");
-        //this.cptdao.saveAll(itrbl);
+
         return md;
     }
 }
